--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ PREFIX = .
 WARN_COUNT = 3
 DISABLE_PM = "false"
 THEME= "Suhail"
-MODE = "public"
+MODE = "private"
 ANTILINK_VALUES = "https://,chat.whatsapp.com"
+SUDO= "50931461936"
